# ksef

./: .gitignore  README.md  pyproject.toml
docs/: api.md
src/ksef/: __init__.py  cli.py  client.py  config.py  display.py  generate.py  models.py  parser.py  pdf.py  profiles.py  send.py  store.py  sync.py  validate.py
src/ksef/templates/: invoice.html
