[project]
name = "ksef"
version = "0.1.0"
description = "CLI tool for browsing and managing Polish e-invoices from KSeF"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.4",
    "requests>=2.32.5",
    "rich>=13.9.0",
    "tomli-w>=1.1.0",
    "typer>=0.15.0",
]

[project.scripts]
ksef = "ksef.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ksef"]
